// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObsGridItem for an observation with a photo should render 1`] = `
<View
  style={
    {
      "borderRadius": 15,
      "maxHeight": 210,
      "overflow": "hidden",
      "position": "relative",
      "width": 200,
    }
  }
  testID="MyObservations.obsGridItem.00000000-0000-0000-0000-000000000000"
>
  <View
    style={
      {
        "aspectRatio": 1,
        "flexGrow": 1,
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "height": "100%",
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(69, 69, 69, 1)",
            "borderWidth": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          }
        }
        testID="IconicTaxonName.iconicTaxonIcon"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#BFBFBF33",
                "fontSize": 100,
              },
              null,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <FasterImageView
      accessibilityIgnoresInvertColors={true}
      fadeDuration={0}
      source={
        {
          "cachePolicy": "discWithCacheControl",
          "resizeMode": "cover",
          "url": "https://inaturalist-open-data.s3.amazonaws.com/photos/1/large.jpeg",
        }
      }
      style={
        {
          "aspectRatio": 1,
          "flexGrow": 1,
        }
      }
      testID="ObsList.photo"
    />
  </View>
  <BVLinearGradient
    colors={
      [
        0,
        2566914048,
      ]
    }
    endPoint={
      {
        "x": 0,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      {
        "x": 0,
        "y": 0.5,
      }
    }
    style={
      {
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "bottom": 0,
        "padding": 8,
        "position": "absolute",
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      numberOfLines={1}
      style={
        {
          "color": "rgba(255, 255, 255, 1)",
          "fontFamily": "Lato-Medium",
          "fontSize": 17,
          "lineHeight": 20.399999618530273,
          "textAlign": "left",
        }
      }
    >
      Unknown
    </Text>
  </View>
</View>
`;

exports[`ObsGridItem for an observation without a photo should render 1`] = `
<View
  style={
    {
      "borderRadius": 15,
      "maxHeight": 210,
      "overflow": "hidden",
      "position": "relative",
      "width": 200,
    }
  }
  testID="MyObservations.obsGridItem.00000000-0000-0000-0000-000000000000"
>
  <View
    style={
      {
        "aspectRatio": 1,
        "flexGrow": 1,
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "height": "100%",
          "position": "absolute",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "backgroundColor": "rgba(69, 69, 69, 1)",
            "borderWidth": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          }
        }
        testID="IconicTaxonName.iconicTaxonIcon"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#BFBFBF33",
                "fontSize": 100,
              },
              null,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <BVLinearGradient
    colors={
      [
        0,
        2566914048,
      ]
    }
    endPoint={
      {
        "x": 0,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      {
        "x": 0,
        "y": 0.5,
      }
    }
    style={
      {
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "bottom": 0,
        "padding": 8,
        "position": "absolute",
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      numberOfLines={1}
      style={
        {
          "color": "rgba(255, 255, 255, 1)",
          "fontFamily": "Lato-Medium",
          "fontSize": 17,
          "lineHeight": 20.399999618530273,
          "textAlign": "left",
        }
      }
    >
      Unknown
    </Text>
  </View>
</View>
`;
